--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "hmin",
   "license": "ISC",
   "devDependencies": {
+    "neo4j-driver": "^4.1.2",
     "puppeteer": "^5.3.1"
   },
   "dependencies": {
